# meshcore-mqtt

./: .dockerignore  .env.docker.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.example.json  config.example.yaml  docker-compose.yml  docker-run.example.sh  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md  tasks.md
.claude/commands/: auto-commit.md
.github/workflows/: ci.yml  code-quality.yml  docker-build.yml  test.yml
meshcore_mqtt/: __init__.py  bridge.py  config.py  main.py  meshcore_client.py  mqtt_client.py
tests/: __init__.py  test_bridge.py  test_command_forwarding.py  test_config.py  test_configurable_events.py  test_json_serialization.py  test_logging.py
